kubernetes/homelab/data-storage/configs/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hl
  namespace: minio
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: api
      port: 9000
      targetPort: 9000
  selector:
    app: minio
