kubernetes/homelab/data-storage/configs/minio/minio-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minio
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: minio-tls
    hosts:
    - miniox.daddyshome.fr
